force-app/src/objects/ffirule__IntegrationRuleButton__c.object
<CustomObject>
    <customHelpPage>ffirule__helpintegrationrulebutton</customHelpPage>
    <fields>
        <fullName>ffirule__DetailPageButton__c</fullName>
        <formula>IF( OR(ffirule__ListObject__c==null,ffirule__ListObject__c == &apos;&apos; ) ,

&apos;&lt;apex:page standardController=&quot;&apos; + ffirule__IntegrationRule__r.ffirule__SourceObject__c + &apos;&quot; extensions=&quot;ffirule.IntegrationRuleEngine&quot; action=&quot;&apos;+&apos;{&apos;+&apos;!&apos;+&apos;convert&apos;+&apos;}&apos;+&apos;&quot; lightningStylesheets=&quot;true&quot;&gt;&apos;+ BR() +&apos;&lt;ffirule:IntegrationRule engine=&quot;&apos;+&apos;{&apos;+&apos;!&apos;+&apos;engine&apos;+&apos;}&apos;+&apos;&quot;/&gt;&apos;+ BR() + &apos;&lt;/apex:page&gt;&apos;,

&apos;&lt;apex:page standardController=&quot;&apos; + ffirule__ListObject__c + &apos;&quot; extensions=&quot;ffirule.IntegrationRuleEngine&quot; action=&quot;&apos;+&apos;{&apos;+&apos;!&apos;+&apos;convert&apos;+&apos;}&apos;+&apos;&quot; lightningStylesheets=&quot;true&quot;&gt;&apos;+ BR() +&apos;&lt;ffirule:IntegrationRule engine=&quot;&apos;+&apos;{&apos;+&apos;!&apos;+&apos;engine&apos;+&apos;}&apos;+&apos;&quot;/&gt;&apos;+ BR() + &apos;&lt;/apex:page&gt;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detail Page Button</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__IntegrationRule__c</fullName>
        <label>ClickLink Rule</label>
        <referenceTo>ffirule__IntegrationRule__c</referenceTo>
        <relationshipLabel>ClickLink Buttons</relationshipLabel>
        <relationshipName>IntegrationRuleButtons</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffirule__ListButton__c</fullName>
        <formula>IF( OR(ffirule__ListObject__c==null,ffirule__ListObject__c == &apos;&apos; ) ,

&apos;&lt;apex:page standardController=&quot;&apos; + ffirule__IntegrationRule__r.ffirule__SourceObject__c + &apos;&quot; extensions=&quot;ffirule.IntegrationRuleEngine&quot; action=&quot;&apos;+&apos;{&apos;+&apos;!&apos;+&apos;convert&apos;+&apos;}&apos;+&apos;&quot; recordSetVar=&quot;records&quot; lightningStylesheets=&quot;true&quot;&gt;&apos; + BR() +&apos;&lt;ffirule:IntegrationRule engine=&quot;&apos;+&apos;{&apos;+&apos;!&apos;+&apos;engine&apos;+&apos;}&apos;+&apos;&quot;/&gt;&apos;+ BR() +&apos;&lt;/apex:page&gt;&apos;,

&apos;&lt;apex:page standardController=&quot;&apos; + ffirule__ListObject__c + &apos;&quot; extensions=&quot;ffirule.IntegrationRuleEngine&quot; action=&quot;&apos;+&apos;{&apos;+&apos;!&apos;+&apos;convert&apos;+&apos;}&apos;+&apos;&quot; recordSetVar=&quot;records&quot; lightningStylesheets=&quot;true&quot;&gt;&apos; + BR() +&apos;&lt;ffirule:IntegrationRule engine=&quot;&apos;+&apos;{&apos;+&apos;!&apos;+&apos;engine&apos;+&apos;}&apos;+&apos;&quot;/&gt;&apos;+ BR() +&apos;&lt;/apex:page&gt;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Button</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__ListObjectSourceIDField__c</fullName>
        <label>List Object Source ID Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__ListObject__c</fullName>
        <label>List Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__VisualforcePage__c</fullName>
        <label>Visualforce Page</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>ClickLink Button</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ClickLink Buttons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>